.metadata/.plugins/org.eclipse.cdt.ui/UserInterfaceDemo.build.log
13:00:35 **** Incremental Build of configuration Debug for project UserInterfaceDemo ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L432xx -c -I../Core/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:137:30: error: incompatible type for argument 1 of 'HAL_CAN_GetRxMessage'
  137 |     if (HAL_CAN_GetRxMessage(hcan1, CAN_RX_FIFO0, &RxHeader, RxData) == HAL_ERROR) {
      |                              ^~~~~
      |                              |
      |                              CAN_HandleTypeDef
In file included from ../Core/Inc/stm32l4xx_hal_conf.h:282,
                 from ../Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal.h:29,
                 from ../Core/Inc/main.h:30,
                 from ../Core/Src/main.c:20:
../Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_can.h:694:59: note: expected 'CAN_HandleTypeDef *' but argument is of type 'CAN_HandleTypeDef'
  694 | HAL_StatusTypeDef HAL_CAN_GetRxMessage(CAN_HandleTypeDef *hcan, uint32_t RxFifo,
      |                                        ~~~~~~~~~~~~~~~~~~~^~~~
../Core/Src/main.c: In function 'MX_CAN1_Init':
../Core/Src/main.c:251:22: warning: variable 'sFilterConfig' set but not used [-Wunused-but-set-variable]
  251 |   CAN_FilterTypeDef  sFilterConfig;
      |                      ^~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:37: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

13:00:36 Build Failed. 2 errors, 1 warnings. (took 478ms)

